--- a/premiere/src/theme/youtuberSlider.css
+++ b/premiere/src/theme/youtuberSlider.css
@@ -21,9 +21,9 @@
     height: var(--height);
     position: absolute;
     left: 100%;
-    animation: autoRun 20s linear infinite;
+    animation: autoRun 30s linear infinite;
     transition: filter 0.5s;
-    animation-delay: calc( (20s / var(--quantity)) * (var(--position) - 1) - 20s)!important;
+    animation-delay: calc( (30s / var(--quantity)) * (var(--position) - 1) - 30s)!important;
 }
 .ytslider .ytlist .ytitem img{
     width: 100%;
@@ -37,13 +37,17 @@
 }
 .ytslider:hover .ytitem{
     animation-play-state: paused!important;
+    opacity: 0.5;
     filter: grayscale(1);
 }
 .ytslider .ytitem:hover{
     filter: grayscale(0);
+    opacity: 1;
 }
 .ytslider[reverse="true"] .ytitem{
     animation: reversePlay 20s linear infinite;
+    transition: filter 0.5s, animation-duration 1s ease-in-out;
+    
 }
 @keyframes reversePlay{
     from{
